SCC-14 Update CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project(SCC)
 
 set(CMAKE_CXX_STANDARD 17)
 
+include_directories(include)
 add_executable(SCC
-        main.cpp)
+        src/main.cpp)
