--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,6 @@ add_executable(SCC
         src/main.cpp
         src/conf.cpp
         src/lexical_analyzer.cpp
+        src/syntax_analyzer.cpp
         src/ast_handler.cpp
         src/query_assembler.cpp)
