SCC-32 Add check on unique flags, add check on existed path.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 project(SCC)
 
 set(CMAKE_CXX_STANDARD 17)
+add_compile_options(-Wall -Wextra)
 
 include_directories(include)
 add_executable(SCC
