--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ add_executable(SCC
         src/lexical_analyzer.cpp
         src/syntax_analyzer.cpp
         src/ast_handler.cpp
-        src/query_assembler.cpp)
+        src/query_assembler.cpp
+        src/ast.cpp)
