SCC-37 add tests on set-get mode and SQL path in config.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,28 @@ add_executable(SCC
         src/syntax_analyzer.cpp
         src/ast_handler.cpp
         src/query_assembler.cpp)
+
+
+include(FetchContent)
+FetchContent_Declare(
+        googletest
+        URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+set(TestExec SCC_Test_System)
+include_directories(include)
+add_executable(${TestExec}
+        test/config_test/config_test.cpp src/config.cpp src/log.cpp)
+
+target_link_libraries(
+        ${TestExec}
+        gtest_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(${TestExec})
