SCC-39 Made tests for tree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,8 @@ set(TestExec SCC_Test_System)
 include_directories(include)
 add_executable(${TestExec}
         test/config_test/config_test.cpp src/config.cpp src/log.cpp
-        test/log_test/log_test.cpp src/log.cpp)
+        test/log_test/log_test.cpp src/log.cpp
+        test/ast_test/ast_test.cpp src/ast.cpp)
 
 target_link_libraries(
         ${TestExec}
