--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ add_executable(${TestExec}
         test/log_test/log_test.cpp src/log.cpp
         test/ast_test/ast_test.cpp src/ast.cpp
         test/lexical_analyzer_test/lexical_analyzer_test.cpp src/lexical_analyzer.cpp
-        test/SQL_AST_test/SQL_AST_test.cpp src/tree_dump.cpp)
+        test/SQL_AST_test/SQL_AST_test.cpp src/tree_dump.cpp src/syntax_analyzer_general.cpp src/syntax_analyzer_ddl.cpp src/syntax_analyzer_dml.cpp src/syntax_analyzer_other.cpp)
 
 target_link_libraries(
         ${TestExec}
