SCC-59 add app compilation for the windows and creation of .msi package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,21 @@
 cmake_minimum_required(VERSION 3.10)
 
+if (APPLE)
+    #
+elseif (WIN32)
+    message("Set compilers for Windows")
+#    set(C_COMPILER "C:/MinGW/bin/gcc")
+#    set(CXX_COMPILER "C:/MinGW/bin/g++")
+elseif (UNIX)
+    message("Set compilers for Linux")
+    set(C_COMPILER "/usr/bin/gcc")
+    set(CXX_COMPILER "/usr/bin/g++")
+endif ()
+
+# Set compilers
+set(CMAKE_C_COMPILER ${C_COMPILER})
+set(CMAKE_CXX_COMPILER ${CXX_COMPILER})
+
 # Set project
 project(SCC)
 
@@ -7,35 +23,109 @@ project(SCC)
 set(CMAKE_CXX_STANDARD 17)
 
 # Set Version (rc - Release Candidate)
-set(deb_SCC_VERSION_MAJOR 0)
-set(deb_SCC_VERSION_MINOR 9)
-set(deb_SCC_VERSION_PATCH 0)
-set(deb_SCC_VERSION "${deb_SCC_VERSION_MAJOR}.${deb_SCC_VERSION_MINOR}.${deb_SCC_VERSION_PATCH}-rc")
+set(SCC_VERSION_MAJOR 0)
+set(SCC_VERSION_MINOR 9)
+set(SCC_VERSION_PATCH 0)
+set(SCC_VERSION "${SCC_VERSION_MAJOR}.${SCC_VERSION_MINOR}.${SCC_VERSION_PATCH}")
 
 # Set developers
-set(deb_SCC_MAINTAINERS "Artyom Fartygin, Roman Korostinskiy")
+set(SCC_MAINTAINERS "Artyom Fartygin, Roman Korostinskiy")
 
 # Cross-compilation
 if (APPLE)
     message("Are you using ${CMAKE_SYSTEM_NAME}?")
 elseif (WIN32)
     message("Are you using ${CMAKE_SYSTEM_NAME}?")
-elseif (UNIX)
-    message("Are you using ${CMAKE_SYSTEM_NAME}?")
 
     # Set compilation flags
     if (PACKAGE)
-        message("Invoked the creation of a .deb package")
-        set(PACKAGE_CREATION_FLAG "-DCREATE_DEBIAN_PACKAGE")
+        message("Invoked the creation of a .msi package")
+        set(PACKAGE_CREATION_FLAG "-DCREATE_PACKAGE")
+        set(PACKAGE_TYPE_FLAG "-DMSI_PACKAGE")
     endif ()
-    set(MACROS_FLAGS "-Ddeb_SCC_VERSION=\"\\\"${deb_SCC_VERSION}\\\"\" -Ddeb_SCC_MAINTAINERS=\"\\\"${deb_SCC_MAINTAINERS}\\\"\" ${PACKAGE_CREATION_FLAG}")
+    set(MACROS_FLAGS "-DSCC_VERSION=\"\\\"${SCC_VERSION}\\\"\" \
+-DSCC_MAINTAINERS=\"\\\"${SCC_MAINTAINERS}\\\"\" ${PACKAGE_CREATION_FLAG} \
+${PACKAGE_TYPE_FLAG}")
     set(COMPILATION_FLAGS "-Wall -Wextra -g ${MACROS_FLAGS}")
 
     # Set C++ compiler's flags
     set(CMAKE_CXX_FLAGS ${COMPILATION_FLAGS})
 
     include_directories(include)
-    add_executable(SCC
+    add_executable(scc
+            src/main.cpp
+            src/log.cpp
+            src/config.cpp
+            src/ast.cpp
+            src/lexical_analyzer.cpp
+            src/syntax_analyzer_general.cpp
+            src/syntax_analyzer_ddl.cpp
+            src/syntax_analyzer_dml.cpp
+            src/syntax_analyzer_other.cpp
+            src/ast_handler.cpp
+            src/query_assembler_general.cpp
+            src/query_assembler_ddl.cpp
+            src/query_assembler_dml.cpp
+            src/query_assembler_other.cpp
+            src/tree_dump.cpp)
+
+    ############################## INSTALLER CONFIGURATION ##############################
+
+    # Tell CPack to generate a .msi package
+    set(CPACK_GENERATOR "WIX")
+
+    # Set menu folder name
+    set(CPACK_WIX_PROGRAM_MENU_FOLDER "SCC")
+
+    # Binaries
+    install(TARGETS scc
+            DESTINATION bin)
+
+    # Create directory for the logs
+    install(DIRECTORY DESTINATION log DIRECTORY_PERMISSIONS
+            OWNER_WRITE OWNER_READ OWNER_EXECUTE
+            GROUP_WRITE GROUP_READ GROUP_EXECUTE
+            WORLD_WRITE WORLD_READ WORLD_EXECUTE)
+
+    ############################## PACKAGE CONFIGURATION ##############################
+
+    set(CPACK_PACKAGE_INSTALL_DIRECTORY "SCC")
+
+    # Set a Package Version
+    set(CPACK_PACKAGE_VERSION ${SCC_VERSION})
+
+    # Set package name
+    set(CPACK_PACKAGE_NAME "SCC")
+
+    # Set a brief description
+    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "SQL to CypherQL Converter")
+
+    # Set a long description
+    set(CPACK_PACKAGE_DESCRIPTION "The SCC is a tool, which allows you \
+to migrate data from the relational (MS SQL) \
+to the graph (neo4j) database.")
+
+    # Include CPack
+    include(CPack)
+elseif (UNIX)
+    message("Are you using ${CMAKE_SYSTEM_NAME}?")
+
+    # Set compilation flags
+    if (PACKAGE)
+        message("Invoked the creation of a .deb package")
+        set(PACKAGE_CREATION_FLAG "-DCREATE_PACKAGE")
+        set(PACKAGE_TYPE_FLAG "-DDEBIAN_PACKAGE")
+    endif ()
+    set(MACROS_FLAGS "-DSCC_VERSION=\"\\\"${SCC_VERSION}\\\"\" \
+-DSCC_MAINTAINERS=\"\\\"${SCC_MAINTAINERS}\\\"\" ${PACKAGE_CREATION_FLAG} \
+${PACKAGE_TYPE_FLAG}")
+    set(COMPILATION_FLAGS "-Wall -Wextra -g ${MACROS_FLAGS}")
+
+    # Set C++ compiler's flags
+    set(CMAKE_CXX_FLAGS ${COMPILATION_FLAGS})
+
+    include_directories(include)
+    add_executable(scc
             src/main.cpp
             src/log.cpp
             src/config.cpp
@@ -53,7 +143,7 @@ elseif (UNIX)
             src/tree_dump.cpp)
 
     # Binaries
-    install(TARGETS SCC
+    install(TARGETS scc
             DESTINATION bin)
 
     # Create directory for the logs
@@ -64,7 +154,7 @@ elseif (UNIX)
     set(CPACK_GENERATOR "DEB")
 
     # Set a Package Maintainer.
-    set(CPACK_DEBIAN_PACKAGE_MAINTAINER ${deb_SCC_MAINTAINERS})
+    set(CPACK_DEBIAN_PACKAGE_MAINTAINER ${SCC_MAINTAINERS})
 
     # Set a brief description
     set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "SQL to CypherQL Converter")
@@ -75,7 +165,7 @@ to migrate data from the relational (MS SQL) \
 to the graph (neo4j) database.")
 
     # Set a Package Version
-    set(CPACK_PACKAGE_VERSION ${deb_SCC_VERSION})
+    set(CPACK_PACKAGE_VERSION ${SCC_VERSION})
 
     # Set dependencies
     set(CPACK_DEBIAN_PACKAGE_DEPENDS "graphviz (>= 2.42)")
@@ -90,7 +180,7 @@ else ()
 endif ()
 
 # Google Tests
-if (NOT PACKAGE)
+if (NOT PACKAGE AND NOT WIN32)
     include(FetchContent)
     FetchContent_Declare(
             googletest
