SCC-63: Turn off broken tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -252,10 +252,11 @@ if (NOT PACKAGE)
             test/ast_test/ast_test.cpp src/ast.cpp)
     set(LEXICAL_ANALYZER_TEST
             test/lexical_analyzer_test/lexical_analyzer_test.cpp src/lexical_analyzer.cpp)
-    set(SQL_AST_TEST
-            test/SQL_AST_test/SQL_AST_test.cpp src/syntax_analyzer_general.cpp
-            src/syntax_analyzer_other.cpp src/syntax_analyzer_ddl.cpp src/syntax_analyzer_dml.cpp
-            src/tree_dump.cpp)
+    # Broken tests
+#    set(SQL_AST_TEST
+#            test/SQL_AST_test/SQL_AST_test.cpp src/syntax_analyzer_general.cpp
+#            src/syntax_analyzer_other.cpp src/syntax_analyzer_ddl.cpp src/syntax_analyzer_dml.cpp
+#            src/tree_dump.cpp)
     add_executable(${TEST_TARGET}
             ${CONFIG_TEST}
             ${LOG_TEST}
